# Democratic-Github

./: .gitignore  Cargo.toml  README.md
.zed/: settings.json
src/: lib.rs
