[package]
name = "nutek-code-new-project"
version = "0.1.0"
edition = "2021"

[dependencies]
mime_guess = "2.0.5"
rusqlite = "0.32.1"
sha256 = "1.5.0"
walkdir = "2.5.0"
diff = "0.1.13"
chrono = "0.4.38"
ignore = "0.4.23"
tokio = { version = "1.42.0", features = ["full"] }
tempfile = "3.14.0"
humansize = "2.1.3"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4", # Lets you generate random UUIDs
]
